--- a/KrausxRGA/UI/wndPONumber.xaml
+++ b/KrausxRGA/UI/wndPONumber.xaml
@@ -201,7 +201,7 @@
 
                                             <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}"
         										Header="Images" 
-        										Width="140" >
+        										Width="200" >
                                                 <DataGridTemplateColumn.CellTemplate>
                                                     <DataTemplate >
                                                         <ScrollViewer x:Name="svScrollImages" Width="250" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto" CanContentScroll="True" Height="70">
@@ -213,7 +213,7 @@
                                                 </DataGridTemplateColumn.CellTemplate>
                                             </DataGridTemplateColumn>
 
-                                            <DataGridTemplateColumn Header="Reasons" 
+                                            <!--<DataGridTemplateColumn Header="Reasons" 
         										HeaderStyle="{StaticResource HeaderStyleKey}"
         										Width="50" >
                                                 <DataGridTemplateColumn.CellTemplate>
@@ -226,8 +226,8 @@
                                                         </ContentControl>
                                                     </DataTemplate>
                                                 </DataGridTemplateColumn.CellTemplate>
-                                            </DataGridTemplateColumn>
-                                            <DataGridTemplateColumn Header="Bar Code" Width="265" >
+                                            </DataGridTemplateColumn>-->
+                                            <DataGridTemplateColumn Header="Bar Code" Width="290" >
                                                 <DataGridTemplateColumn.HeaderStyle>
                                                     <Style TargetType="{x:Type DataGridColumnHeader}">
                                                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -342,36 +342,36 @@
 
                             <Border>
                                 <Canvas Height="471">
-                                    <Border Width="790" CornerRadius="10" Canvas.Top="2" BorderBrush="#FF787878" BorderThickness="2,0,2,2" Height="241" >
+                                    <Border Width="790" CornerRadius="10" Canvas.Top="2" BorderBrush="#FF787878" BorderThickness="2,0,2,2" Height="332" >
                                         <Canvas Margin="-10,0,10,0" Name="CanvasConditions" IsEnabled="False">
                                             <Label Name="lblpoints" Height="39" Width="105" Canvas.Left="656" Canvas.Top="75"></Label>
 
                                             <Canvas>
-                                                <Label Canvas.Left="141" Canvas.Top="28" Name="lblItemIsNew" Content="Item is New" Style="{StaticResource lblConstant}" Width="167" Height="32" FontSize="20" ></Label>
-                                                <RadioButton Content="Yes" Name="btnBoxNew" Canvas.Left="340" Canvas.Top="29" Height="29" Width="58" FontSize="20" Checked="btnBoxNew_Checked_1"></RadioButton>
-                                                <RadioButton Content="No" Name="btnBoxNotNew" Canvas.Left="480" Canvas.Top="29" Height="29" Width="104" FontSize="20" Checked="btnBoxNotNew_Checked_1"></RadioButton>
+                                                <Label Canvas.Left="229" Canvas.Top="20" Name="lblItemIsNew" Content="Item is New" Style="{StaticResource lblConstant}" Width="167" Height="46" FontSize="30" ></Label>
+                                                <RadioButton Content="Yes" Name="btnBoxNew" Canvas.Left="420" Canvas.Top="21" Height="45" Width="75" FontSize="30" Checked="btnBoxNew_Checked_1"></RadioButton>
+                                                <RadioButton Content="No" Name="btnBoxNotNew" Canvas.Left="520" Canvas.Top="20" Height="46" Width="104" FontSize="30" Checked="btnBoxNotNew_Checked_1"></RadioButton>
                                             </Canvas>
                                             <Canvas>
-                                                <Label Canvas.Left="143" Canvas.Top="186" Name="lblDefectontea" Content="Defect in Transite" Style="{StaticResource lblConstant}" Width="167" Height="32" FontSize="20" ></Label>
-                                                <RadioButton Content="Yes" Name="btntransiteYes" Canvas.Left="336" Canvas.Top="188" Height="29" Width="84" FontSize="20" Checked="btntransiteYes_Checked_1" IsEnabled="False"></RadioButton>
-                                                <RadioButton Content="No" Canvas.Left="476" Name="btntransiteNo" Canvas.Top="188" Height="29" Width="104" FontSize="20" Checked="btntransiteNo_Checked" IsEnabled="False" ></RadioButton>
+                                                <Label Canvas.Left="117" Canvas.Top="253" Name="lblDefectontea" Content="Defect in Transite" Style="{StaticResource lblConstant}" Width="284" Height="43" FontSize="30" ></Label>
+                                                <RadioButton Content="Yes" Name="btntransiteYes" Canvas.Left="418" Canvas.Top="252" Height="44" Width="84" FontSize="30" Checked="btntransiteYes_Checked_1" IsEnabled="False"></RadioButton>
+                                                <RadioButton Content="No" Canvas.Left="528" Name="btntransiteNo" Canvas.Top="252" Height="42" Width="79" FontSize="30" Checked="btntransiteNo_Checked" IsEnabled="False" ></RadioButton>
                                             </Canvas>
                                             <Canvas>
-                                                <Label Canvas.Left="152" Name="lblInstalled" Canvas.Top="70" Content="Installed" Style="{StaticResource lblConstant}" Width="152" Height="32" FontSize="20" ></Label>
-                                                <RadioButton Content="Yes" Canvas.Left="338" Canvas.Top="72" Name="btnInstalledYes" Height="29" Width="84" FontSize="20" Checked="btnInstalledYes_Checked_1"></RadioButton>
-                                                <RadioButton Content="No" Canvas.Left="477" Canvas.Top="73" Name="btnInstalledNo" Height="29" Width="84" FontSize="20" Checked="btnInstalledNo_Checked_1" ></RadioButton>
+                                                <Label Canvas.Left="158" Name="lblInstalled" Canvas.Top="70" Content="Installed" Style="{StaticResource lblConstant}" Width="241" Height="47" FontSize="30" ></Label>
+                                                <RadioButton Content="Yes" Canvas.Left="418" Canvas.Top="76" Name="btnInstalledYes" Height="45" Width="84" FontSize="30" Checked="btnInstalledYes_Checked_1"></RadioButton>
+                                                <RadioButton Content="No" Canvas.Left="523" Canvas.Top="71" Name="btnInstalledNo" Height="44" Width="84" FontSize="30" Checked="btnInstalledNo_Checked_1" ></RadioButton>
                                             </Canvas>
                                             <Canvas>
-                                                <Label Canvas.Left="30" Name="lblStatus" Canvas.Top="112" Content="Chip/Bended/Scratch/Broken" Style="{StaticResource lblConstant}" Width="281" Height="32" FontSize="20" ></Label>
-                                                <RadioButton Content="Yes"  Canvas.Left="337" Canvas.Top="113" Name="btnStatusYes" Height="29" Width="84" FontSize="20" Checked="btnStatusYes_Checked" ></RadioButton>
-                                                <RadioButton Content="No"  Canvas.Left="477" Canvas.Top="113" Name="btnStatusNo" Height="29" Width="84" FontSize="20" Checked="btnStatusNo_Checked"></RadioButton>
+                                                <Label Canvas.Left="6" Name="lblStatus" Canvas.Top="132" Content="Chip/Bended/Scratch/Broken" Style="{StaticResource lblConstant}" Width="396" Height="46" FontSize="30" ></Label>
+                                                <RadioButton Content="Yes"  Canvas.Left="423" Canvas.Top="133" Name="btnStatusYes" Height="49" Width="84" FontSize="30" Checked="btnStatusYes_Checked" ></RadioButton>
+                                                <RadioButton Content="No"  Canvas.Left="523" Canvas.Top="133" Name="btnStatusNo" Height="47" Width="84" FontSize="30" Checked="btnStatusNo_Checked"></RadioButton>
                                             </Canvas>
                                             <Canvas>
-                                                <Label Canvas.Left="34" Canvas.Top="149" Name="lblManufacturer" Content="Manufacturer Defective" Style="{StaticResource lblConstant}" Width="281" Height="32" FontSize="20" ></Label>
-                                                <RadioButton Content="Yes" Canvas.Left="336" IsEnabled="False" Canvas.Top="153" Name="btnManufacturerYes" Height="29" Width="84" FontSize="20" Checked="btnManufacturerYes_Checked"></RadioButton>
-                                                <RadioButton Content="No" Canvas.Left="477" Canvas.Top="152" IsEnabled="False" Name="btnManufacturerNo" Height="29" Width="84" FontSize="20" Checked="btnManufacturerNo_Checked"></RadioButton>
+                                                <Label Canvas.Left="34" Canvas.Top="187" Name="lblManufacturer" Content="Manufacturer Defective" Style="{StaticResource lblConstant}" Width="372" Height="48" FontSize="30" ></Label>
+                                                <RadioButton Content="Yes" Canvas.Left="420" IsEnabled="False" Canvas.Top="191" Name="btnManufacturerYes" Height="46" Width="84" FontSize="30" Checked="btnManufacturerYes_Checked"></RadioButton>
+                                                <RadioButton Content="No" Canvas.Left="523" Canvas.Top="187" IsEnabled="False" Name="btnManufacturerNo" Height="48" Width="98" FontSize="30" Checked="btnManufacturerNo_Checked"></RadioButton>
                                             </Canvas>
-                                            <Button Content="Done" Name="btnAdd" Canvas.Left="656" Canvas.Top="183" Width="120" Height="38" FontSize="20" Click="btnAdd_Click" ></Button>
+                                            <Button Content="Done" Name="btnAdd" Canvas.Left="642" Canvas.Top="261" Width="119" Height="44" FontSize="20" Click="btnAdd_Click" ></Button>
                                         </Canvas>
                                         <!--<Canvas x:Name="cvCheckboxHolder" Margin="-10,0,10,0">
                                             <Border Height="45" Width="789" Background="#B2111111" Canvas.Top="1" Canvas.Left="8">
@@ -473,7 +473,7 @@
                                         </Canvas>-->
                                     </Border>
 
-                                    <Border Width="791" CornerRadius="10" Canvas.Top="244" BorderBrush="#FF787878" BorderThickness="2,0,2,2" Height="144" Canvas.Left="-1" >
+                                    <!--<Border Width="791" CornerRadius="10" Canvas.Top="244" BorderBrush="#FF787878" BorderThickness="2,0,2,2" Height="144" Canvas.Left="-1" >
                                         <Canvas Margin="0,2,0,5">
                                             <Border Height="47" Width="787" Background="#B2111111" Canvas.Top="1" Canvas.Left="3">
                                                 <TextBlock TextWrapping="Wrap" Text="Other Reason" FontSize="25" Foreground="White" Margin="10,4,266,6"/>
@@ -491,8 +491,8 @@
                                                 </ComboBox.Background>
                                             </ComboBox>
                                         </Canvas>
-                                    </Border>
-                                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="422" Height="56" Width="234" Canvas.Left="556" >
+                                    </Border>-->
+                                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="392" Height="56" Width="234" Canvas.Left="556" >
                                         <StackPanel Orientation="Horizontal">
                                             <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSave.png" MouseDown="btnHomeDone_Click" Width="59"/>
                                             <Button Style="{StaticResource ToolBarButtonBaseStyle}"
@@ -502,7 +502,7 @@
                                         </StackPanel>
                                     </Border>
 
-                                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="422" Height="56" Width="218" >
+                                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="394" Height="56" Width="218" Canvas.Left="8" >
                                         <StackPanel Orientation="Horizontal">
                                             <Image Style="{StaticResource btnImage}"  MouseDown="btnback_Click" Source="/KrausRGA;component/Images/bac.png" Width="36"/>
                                             <Button Style="{StaticResource ToolBarButtonBaseStyle}"
@@ -516,7 +516,7 @@
                             </Border>
                         </StackPanel>
                     </Canvas>
-                    <Border BorderThickness="1" Height="34" Canvas.Top="1175" Width="781" Canvas.Left="6">
+                    <Border BorderThickness="1" Height="43" Canvas.Top="1139" Width="781" Canvas.Left="6">
                         <Canvas Margin="0,1,0,-1">
                             <Border x:Name="bdrMsg" Visibility="Hidden" BorderThickness="1" Height="27" Canvas.Left="0" Width="779" Background="#E1007ACC" Canvas.Top="3">
                                 <Border.Style >
